kustomization/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: openclaw
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openclaw
    spec:
      serviceAccountName: tailscale
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: main
          image: oci.killinit.cc/openclaw/openclaw:latest
          ports:
            - name: http
              containerPort: 18789
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /home/node/.openclaw
        - name: tailscale
          image: ghcr.io/tailscale/tailscale:v1.94.1
          securityContext:
            privileged: true
      volumes:
        - name: data
          emptyDir: {}
        - name: workspace
          image:
            reference: oci.killinit.cc/openclaw/workspace:latest
            pullPolicy: Always
        - name: config
          configMap:
            name: openclaw-config
