kustomization/webhook-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ottawa-flux-webhook
  namespace: flux-system
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: "common"
spec:
  defaultBackend:
    service:
      name: webhook-receiver
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - ottawa-flux-webhook.keiretsu.ts.net
